# cadi

./: .dockerignore  .gitignore  ARCHITECTURE_REFERENCE.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION-INDEX.md  FORWARD_ACCELERATION_ROADMAP.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_PLAN_COMPLETE.md  LICENSE  QUICK_START_GUIDE.md  README.md  REAL_WORLD_PROOF.md  STAGE1_SEMANTIC_SEARCH_SPEC.md  STAGE2_SEMANTIC_HASHING_SPEC.md  STAGE3_GRAPH_LINKING_SPEC.md  STAGE4_CBS_SPEC.md  TODO.md  WORKFLOW_GUIDE.md  example-todo.sh  invalid.cadl  test-mcp.sh  test_semantic_search.rs  valid.cadl
.cadi/: repos.cfg
.github/: copilot-instructions.md
.github/agents/: CADI.agent.md
.github/workflows/: ci.yml  integration_smoke.yml  release.yml  static.yml
benchmarks/: README.md  results.md
cadi-spec/: README.md  abi-compatibility.schema.json  atomic-chunk.schema.json  blob-cadi.schema.json  build-receipt.schema.json  build-spec.schema.json  chunk.schema.json  container-cadi.schema.json  dependency-graph.schema.json  efficiency-metrics.schema.json  garbage-collection.schema.json  ir-cadi.schema.json  llm-context.schema.json  manifest.schema.json  registry-federation.schema.json  security-attestation.schema.json  source-cadi.schema.json  versioning.schema.json
cmd/cadi/: Cargo.toml  README.md
cmd/cadi-mcp-server/: Cargo.toml  README.md
cmd/cadi-mcp-server/src/: main.rs  prompts.rs  protocol.rs  resources.rs  responses.rs  tools.rs
cmd/cadi-server/: Cargo.toml  README.md
cmd/cadi-server/src/: handlers.rs  main.rs  routes.rs  state.rs
cmd/cadi/src/: config.rs  main.rs
cmd/cadi/src/commands/: build.rs  demo.rs  fetch.rs  gc.rs  import.rs  import_v2.rs  init.rs  mod.rs  plan.rs  publish.rs  query.rs  run.rs  scaffold.rs  scrape.rs  stats.rs  trust.rs  validate.rs  verify.rs  visualize.rs
custom-todo-app/: cadi.yaml  package-lock.json  package.json  tsconfig.json
custom-todo-app/public/: index.html
custom-todo-app/src/: App.tsx  styles.css
cyberpunk-todo/: cadi.yaml  cyberpunk-todo.cadi.yaml  package-lock.json  package.json
cyberpunk-todo/public/: index.html
cyberpunk-todo/src/: App.tsx  styles.css
data/graph-db/: db  snap.0000000000000298
demo-projects/todo-api-real/: README.md  cadi.yaml  database.ts  demo.ts  handler.ts  middleware.ts  package-lock.json  package.json  server.ts  todo-api-real.cadi.yaml  tsconfig.json  types.ts
docker/: .env.example  Dockerfile.cli  Dockerfile.dev  Dockerfile.mcp  Dockerfile.server  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
docker/configs/: repos.cfg
docker/init-db/: 01-init.sql
docs/: NO_READ_BUILT.md  NO_READ_IMPLEMENTATION.md  NO_READ_PATTERN.md  cadi-llm-prompt.md  cadl-specification.md  cli-reference.md  extensions-commercialization.md  getting-started.md  index.html
examples/: blog-app.build-spec.yaml  todo-timer.cadi.yaml
examples/java-atomizer/: Cargo.toml  README.md  extension.toml  java-atomizer.cadi.yaml
examples/java-atomizer/src/: lib.rs
frutiger-todo-app/: cadi.yaml  custom-todo-web.cadi.yaml  frutiger-aero-todo.cadi.yaml  package.json  webpack.config.js
internal/cadi-builder/: Cargo.toml  README.md
internal/cadi-builder/examples/: import_demo.rs
internal/cadi-builder/src/: build_spec.rs  builder.rs  cache.rs  cbs.rs  dependency_resolver.rs  engine.rs  importer.rs  lib.rs  plan.rs  transform.rs
internal/cadi-builder/tests/: builder_tests.rs  importer_smoke.rs  sig_verify.rs
internal/cadi-core/: Cargo.toml  README.md
internal/cadi-core/benches/: atomizer_bench.rs  atomizer_bench_html.rs  atomizer_bench_jsx.rs  atomizer_bench_tsx.rs
internal/cadi-core/examples/: bench_runner.rs  ghost_import_demo.rs  insert_nodes.rs
internal/cadi-core/src/: ast.rs  atomic.rs  chunk.rs  deduplication.rs  error.rs  grammar.pest  hash.rs  lib.rs  manifest.rs  normalizer.rs  parser.rs  project_analyzer.rs  repro_test.rs  smart_chunker.rs  validator.rs
internal/cadi-core/src/atomizer/: config.rs  extractor.rs  mod.rs  parser.rs  resolver.rs
internal/cadi-core/src/atomizer/languages/: c.rs  csharp.rs  css.rs  glsl.rs  go.rs  hlsl.rs  html.rs  jsx.rs  mod.rs  python.rs  rust.rs  tsx.rs  typescript.rs  wgsl.rs
internal/cadi-core/src/ghost/: analyzer.rs  mod.rs  policy.rs  resolver.rs
internal/cadi-core/src/graph/: edge.rs  importer.rs  mod.rs  node.rs  query.rs  store.rs
internal/cadi-core/src/rehydration/: assembler.rs  config.rs  engine.rs  mod.rs  view.rs
internal/cadi-core/tests/: parser_tests.rs  polyglot_extraction.rs  todo_timer_web.rs  validator_tests.rs
internal/cadi-extensions/: Cargo.toml  README.md
internal/cadi-extensions/src/: lib.rs  loader.rs  manifest.rs  traits.rs  types.rs
internal/cadi-registry/: Cargo.toml  README.md  schema.surql
internal/cadi-registry/src/: client.rs  db.rs  federation.rs  graph.rs  lib.rs  search.rs  types.rs
internal/cadi-registry/tests/: test_semantic_search.rs  test_surreal_bind.rs  test_update_metadata.rs
internal/cadi-scraper/: Cargo.toml  README.md
internal/cadi-scraper/docs/: SCRAPER-EXECUTIVE-SUMMARY.md  SCRAPER-GUIDE.md  SCRAPER-INDEX.md  SCRAPER-QUICKSTART.md
internal/cadi-scraper/src/: chunker.rs  config.rs  error.rs  fetcher.rs  lib.rs  metadata.rs  parser.rs  scraper.rs  transformer.rs  types.rs
internal/llm/: Cargo.toml
internal/llm/src/: embeddings.rs  lib.rs  store.rs
minimalist-todo/: cadi.yaml  minimalist-todo.cadi.yaml  package-lock.json  package.json
ocean-todo/: cadi.yaml  ocean-todo.cadi.yaml  package-lock.json  package.json
scripts/: example-scraper.sh  publish-to-crates-io.sh  test-mcp-integration.sh
test-env/: README-smoke.md  README.md  TEST-RESULTS.md
tests/: build_spec_test.rs  e2e_cadi_workflow.rs  graph_linking_test.rs  handlers_view_test.rs  integration_atomizer_view.rs  integration_smoke.rs  semantic_deduplication_test.rs
vscode-extension/: .vscodeignore  PUBLISHING-GUIDE.md  README.md  cadi-2.0.0.vsix  convert-icon.js  package-lock.json  package.json  publish.sh  tsconfig.json
website/: index.html  package-lock.json  package.json  server.js  visualize.html
website/docs/: mcp.md  (+4 more)
(+60 files in other folders)
