[package]
name = "cadi-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CADI MCP (Model Context Protocol) server for LLM integration"

[[bin]]
name = "cadi-mcp-server"
path = "src/main.rs"

[dependencies]
cadi-core = { path = "../../internal/cadi-core" }
cadi-registry = { path = "../../internal/cadi-registry" }
cadi-builder = { path = "../../internal/cadi-builder" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
sha2 = "0.10"
num_cpus = "1.16"
tracing.workspace = true
tracing-subscriber.workspace = true
dirs = "5.0"
# HTTP transport for Docker/server mode
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.4", features = ["derive", "env"] }
