[package]
name = "cadi-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CADI registry server"

[[bin]]
name = "cadi-server"
path = "src/main.rs"

[dependencies]
cadi-core = { path = "../../internal/cadi-core" }
cadi-registry = { path = "../../internal/cadi-registry" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
