[package]
name = "cadi-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CADI registry server for content-addressed chunk storage and retrieval"
readme = "README.md"

[[bin]]
name = "cadi-server"
path = "src/main.rs"

[dependencies]
cadi-core = { version = "1.1.1", path = "../../internal/cadi-core" }
cadi-registry = { version = "1.1.1", path = "../../internal/cadi-registry" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
