[package]
name = "cadi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cadi"
keywords.workspace = true
categories.workspace = true
description = "CADI CLI - Content-Addressed Development Interface"
readme = "README.md"

[[bin]]
name = "cadi"
path = "src/main.rs"

[dependencies]
cadi-core = { version = "1.1.0", path = "../../internal/cadi-core" }
cadi-builder = { version = "1.1.0", path = "../../internal/cadi-builder" }
cadi-registry = { version = "1.1.0", path = "../../internal/cadi-registry" }
cadi-scraper = { version = "1.1.0", path = "../../internal/cadi-scraper" }

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
console.workspace = true
dialoguer.workspace = true
directories.workspace = true
config.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
reqwest.workspace = true
urlencoding = "2.1"
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
