[package]
name = "cadi-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cadi-builder"
keywords = ["cadi", "builder", "build-engine", "wasm", "transformation"]
categories = ["development-tools::build-utils"]
description = "CADI build engine and transformation pipeline for WASM and binaries"
readme = "README.md"

[dependencies]
cadi-core = { version = "1.1.1", path = "../cadi-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
console.workspace = true
