[package]
name = "cadi-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cadi-builder"
keywords = ["cadi", "builder", "build-engine", "wasm", "transformation"]
categories = ["development-tools::build-utils"]
description = "CADI build engine and transformation pipeline for WASM and binaries"
readme = "README.md"

[dependencies]
cadi-core = { version = "2.0.1", path = "../cadi-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
console.workspace = true
cadi-registry = { path = "../cadi-registry" }
chrono.workspace = true
ed25519-dalek = "1.0"
rand = "0.8"
base64 = "0.21"
async-trait = "0.1"
anyhow.workspace = true
