[package]
name = "cadi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cadi-core"
keywords = ["cadi", "core", "types", "utilities"]
categories = ["development-tools", "encoding"]
description = "CADI core types and utilities for content-addressed development"
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
