[package]
name = "cadi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cadi-core"
keywords = ["cadi", "core", "types", "utilities"]
categories = ["development-tools", "encoding"]
description = "CADI core types and utilities for content-addressed development"
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
pest = "2.7"
pest_derive = "2.7"
regex = "1.10"

# Graph Store (Phase 0)
sled = "0.34"

# Tree-sitter AST Parsing (Phase 1)
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
dirs = "5.0"

[[example]]
name = "ghost_import_demo"
path = "examples/ghost_import_demo.rs"

[features]
default = []
# Enable tree-sitter parsing (adds significant compile time)
ast-parsing = []
