[package]
name = "cadi-extensions"
version = "2.0.0"
edition = "2021"
description = "Plugin system for CADI extensions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ConflictingTheories/cadi"
homepage = "https://cadi.dev"
documentation = "https://docs.cadi.dev"

[dependencies]
cadi-core = { path = "../cadi-core", version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
libloading = "0.8"
toml = "0.8"
semver = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"