[package]
name = "cadi-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CADI registry client for chunk storage and retrieval"

[dependencies]
cadi-core = { path = "../cadi-core" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
