[package]
name = "cadi-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CADI LLM integration and embedding utilities"

[dependencies]
cadi-core = { version = "2.0.0", path = "../cadi-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1"
